--- a/TareaBoostrap4/login.html
+++ b/TareaBoostrap4/login.html
@@ -71,7 +71,7 @@
             </div>
 
             <div class="col-sm-10 d-flex justify-content-center mt-5">
-              <a href="#" style="color: rgb(118, 73, 248); text-decoration: none;"> <small> ¿Usuario nuevo? Crea una
+              <a href="register.html" style="color: rgb(118, 73, 248); text-decoration: none;"> <small> ¿Usuario nuevo? Crea una
                   cuenta</small> </a>
             </div>
 
