--- a/TareaBoostrap4/register.html
+++ b/TareaBoostrap4/register.html
@@ -107,7 +107,7 @@
                             <div class="row mt-4 mb-5 ms-4">
                                 <div class="col">
                                     <div class="col-sm d-flex justify-content-center">
-                                        <a href="#" style="color: rgb(118, 73, 248); text-decoration: none;"><small> ¿Ya
+                                        <a href="login.html" style="color: rgb(118, 73, 248); text-decoration: none;"><small> ¿Ya
                                                 tienes cuenta? Inicia sesion</small></a>
                                     </div>
                                 </div>
